# PyFruit-Quest-Terminal-Game

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-windows.txt  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: lint.yml  python-ci.yml  python.yml
src/: __init__.py  constants.py  enemies.py  game.py  grid.py  pickups.py  player.py
src/pyfruit_quest/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
