[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfruit-quest"
version = "0.1.0"
description = "Terminal-based fruit collection game"
authors = [{name = "Your Name"}]
requires-python = ">=3.12"
dependencies = [
    "pytest==8.0.2",
    "coverage==7.3.2",
    "black==24.3.0",
    "flake8==7.0.0",
    "python-dateutil==2.9.0"
]

[project.optional-dependencies]
dev = ["windows-curses==2.4.0"]